# Compilador_HC11

./: .gitignore  pyproject.toml
contextpacker_out/: manifest.json  transcript.txt
docs/: REPORT.html  TASKS.html  TASKS.md
src/hc11cc/: __init__.py  config.py  driver.py  errores.py
src/hc11cc/backend/hc11/: emit.py  isa.py  isel.py  program.py
src/hc11cc/frontend/: __init__.py  ast_nodes.py  lexer.py  parser.py  sema.py  tokens.py
src/hc11cc/ir/: builder.py  emit.py  ir.py
tests/: conftest.py  test_lexer.py  test_parser.py
tests/integracion/: test_pipeline_smoke.py
tests/miembro1_frontend/: test_frontend_smoke.py
tests/miembro2_ir/: test_ir_smoke.py
tests/miembro3_backend/: test_backend_smoke.py
tools/: OPCIONAL.md  Visualizador_Compilador_HC11.html
