[project]
name = "hc11cc-py"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "frontend: pruebas del frontend",
  "ir: pruebas del IR",
  "backend: pruebas del backend",
  "integracion: pruebas end-to-end"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
